tests/bad/record.tig
/* a record type and a record variable */
  type  rectype = {name : string, age : int}
  var rec1 := nil
  rec1
